fixing nav-logo on mobile

--- a/assets/scss/templates/_navigation.scss
+++ b/assets/scss/templates/_navigation.scss
@@ -38,7 +38,7 @@
 }
 
 .nav-logo {
-  width: 15%;
+  width: 100%;
 }
 
 .nav-item {
